[gd_scene load_steps=4 format=3 uid="uid://cxteef3x40qsy"]

[ext_resource type="Script" uid="uid://tdsc8x5blkd3" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="AudioStream" uid="uid://bqkyjiaaxksx0" path="res://Assets/Audio/BGM boneka.mp3" id="2_1ehe0"]

[sub_resource type="LabelSettings" id="LabelSettings_y2c35"]
font_size = 141

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_48xlc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.14509805)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.5
offset_top = -332.0
offset_right = 513.5
offset_bottom = 31.000153
grow_horizontal = 2
grow_vertical = 2
text = "Detective"
label_settings = SubResource("LabelSettings_y2c35")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -38.0
offset_right = -62.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.12, 3.12)
text = "Start"

[node name="Button3" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = 79.0
offset_right = -62.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.12, 3.12)
text = "Settings"

[node name="Button4" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = 201.0
offset_right = -62.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.12, 3.12)
text = "Exit"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1ehe0")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ColorRect/Button4" to="." method="_on_button_4_pressed"]
